--- a/ImageMosaic.GUI/MainWindow.xaml
+++ b/ImageMosaic.GUI/MainWindow.xaml
@@ -17,9 +17,9 @@
         <Label Content="Destiny Directory" Margin="388,22,0,0" VerticalAlignment="Top" HorizontalAlignment="Left" Width="101" RenderTransformOrigin="0.248,0.5"/>
         <Button Content="Browse" Margin="0,26,568,0" RenderTransformOrigin="-0.173,-2.062" Height="22" VerticalAlignment="Top" HorizontalAlignment="Right" Width="90" Click="Button_ClickSourceImage"/>
         <Button Content="Browse" Margin="659,26,0,0" VerticalAlignment="Top" HorizontalAlignment="Left" Width="90" Click="Button_ClickDestination" RenderTransformOrigin="-0.47,0.45"/>
-        <Button Content="Do The Thing!" Margin="10,52,823,0" VerticalAlignment="Top" Height="20" Grid.RowSpan="2" Click="Button_ClickDoTheThing"/>
+        <Button x:Name="StartProcessButton" Content="Do The Thing!" Margin="10,52,823,0" VerticalAlignment="Top" Height="20" Grid.RowSpan="2" Click="Button_ClickDoTheThing"/>
         <ProgressBar x:Name="ProgressBar" Height="19" Margin="115,53,23,0" VerticalAlignment="Top" Grid.RowSpan="2"/>
-        <Image HorizontalAlignment="Left" Height="444" Margin="10,48,0,-472" VerticalAlignment="Top" Width="900" Grid.Row="1"/>
+        <Image x:Name="OutputImage" HorizontalAlignment="Left" Height="444" Margin="10,48,0,-472" VerticalAlignment="Top" Width="900" Grid.Row="1"/>
         <Label Content="Tile Size" HorizontalAlignment="Right" Margin="0,23,109,0" VerticalAlignment="Top" RenderTransformOrigin="-0.526,-0.769"/>
         <TextBox x:Name="TileSizeTextBox" HorizontalAlignment="Left" Height="23" Margin="831,27,0,0" TextWrapping="Wrap" Text="10" VerticalAlignment="Top" Width="81" TextChanged="TextBox_TextChanged"/>
     </Grid>
